--- a/FishMarket.Web/packages.config
+++ b/FishMarket.Web/packages.config
@@ -12,4 +12,9 @@
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="Ninject" version="3.3.4" targetFramework="net461" />
+  <package id="Ninject.MVC5" version="3.3.0" targetFramework="net461" />
+  <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net461" />
+  <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
 </packages>
