--- a/FishMarket.Web/Web.config
+++ b/FishMarket.Web/Web.config
@@ -31,6 +31,10 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <authentication mode="Forms">
+      <forms loginUrl="/Account/Login" timeout="50">
+      </forms>
+    </authentication>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
