Price bug is fixed.

--- a/FishMarket.Web/Web.config
+++ b/FishMarket.Web/Web.config
@@ -35,6 +35,13 @@
       <forms loginUrl="/Account/Login" timeout="50">
       </forms>
     </authentication>
+    <globalization
+           fileEncoding="utf-8"
+           requestEncoding="utf-8"
+           responseEncoding="utf-8"
+           culture="en-US"
+           uiCulture="en-US"
+        />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
