ActivationCode and activation status added.

--- a/FishMarket.Repository/FishMarket.Repository.csproj
+++ b/FishMarket.Repository/FishMarket.Repository.csproj
@@ -55,6 +55,10 @@
     <Compile Include="Migrations\201803231246520_Fish.Designer.cs">
       <DependentUpon>201803231246520_Fish.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803232045564_Activation.cs" />
+    <Compile Include="Migrations\201803232045564_Activation.Designer.cs">
+      <DependentUpon>201803232045564_Activation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\FishRepository.cs" />
@@ -73,6 +77,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201803231246520_Fish.resx">
       <DependentUpon>201803231246520_Fish.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803232045564_Activation.resx">
+      <DependentUpon>201803232045564_Activation.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
