--- a/FishMarket.Web/FishMarket.Web.csproj
+++ b/FishMarket.Web/FishMarket.Web.csproj
@@ -172,6 +172,8 @@
     <Content Include="Views\Fish\Index.cshtml" />
     <Content Include="Views\Fish\FishDetail.cshtml" />
     <Content Include="Views\Fish\Edit.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Account\Activation.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
