--- a/FishMarket.Web/FishMarket.Web.csproj
+++ b/FishMarket.Web/FishMarket.Web.csproj
@@ -148,6 +148,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\FishApiController.cs" />
     <Compile Include="Controllers\FishController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
