--- a/FishMarket.Web/Web.config
+++ b/FishMarket.Web/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="fishMarketDbConnectionString" connectionString="Data Source=.;Initial Catalog=FishMarketDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="NLogDb" connectionString="data source=.;initial catalog=NLogDB;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -35,13 +36,7 @@
       <forms loginUrl="/Account/Login" timeout="50">
       </forms>
     </authentication>
-    <globalization
-           fileEncoding="utf-8"
-           requestEncoding="utf-8"
-           responseEncoding="utf-8"
-           culture="en-US"
-           uiCulture="en-US"
-        />
+    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" culture="en-US" uiCulture="en-US" />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
