--- a/FishMarket.Web/packages.config
+++ b/FishMarket.Web/packages.config
@@ -16,5 +16,9 @@
   <package id="Ninject.MVC5" version="3.3.0" targetFramework="net461" />
   <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net461" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net461" />
+  <package id="NLog" version="4.4.13" targetFramework="net461" />
+  <package id="NLog.Config" version="4.4.13" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.4.13" targetFramework="net461" />
+  <package id="NLog.Web" version="4.5.1" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
 </packages>
