--- a/FishMarket.Web.Tests/FishMarket.Web.Tests.csproj
+++ b/FishMarket.Web.Tests/FishMarket.Web.Tests.csproj
@@ -75,7 +75,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\FishRepositoryMock.cs" />
     <Compile Include="Repository\UserRepositoryMock.cs" />
+    <Compile Include="Repository\FishRepositoryTest.cs" />
     <Compile Include="Repository\UserRepositoryTest.cs" />
   </ItemGroup>
   <ItemGroup>
