--- a/FishMarket.Web.Tests/app.config
+++ b/FishMarket.Web.Tests/app.config
@@ -14,6 +14,10 @@
         <assemblyIdentity name="Telerik.JustMock" publicKeyToken="721b6c5bc0326b3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2018.1.117.2" newVersion="2018.1.117.2" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
