--- a/FishMarket.Web.Tests/packages.config
+++ b/FishMarket.Web.Tests/packages.config
@@ -2,6 +2,10 @@
 <packages>
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Moq" version="4.8.2" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.1.17" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.1.17" targetFramework="net461" />
