Account tests done.

--- a/FishMarket.Web.Tests/FishMarket.Web.Tests.csproj
+++ b/FishMarket.Web.Tests/FishMarket.Web.Tests.csproj
@@ -95,6 +95,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\FakeControllerContext.cs" />
     <Compile Include="Controller\AccountControllerTest.cs" />
     <Compile Include="Controller\FishControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
